--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cors": "^2.8.5",
     "dom": "^0.0.3",
     "express": "^4.18.2",
-    "firebase": "^10.0.0",
+    "firebase": "^10.1.0",
     "moment": "^2.29.4",
     "node-libs-browser": "^2.2.1",
     "path-browserify": "^1.0.1",
@@ -25,6 +25,7 @@
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "stream-browserify": "^3.0.0",
     "url": "^0.11.1",
