--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.4",
     "node-libs-browser": "^2.2.1",
     "path-browserify": "^1.0.1",
+    "razorpay": "^2.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
