--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "stream-browserify": "^3.0.0",
+    "stripe": "^12.16.0",
     "url": "^0.11.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
