--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "node-libs-browser": "^2.2.1",
     "path-browserify": "^1.0.1",
     "razorpay": "^2.9.1",
-    "react": "^18.2.0",
-    "react-datepicker": "^4.20.0",
+    "react": "^18.2.0"
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
